Add functioanlity to list to display locs and dungeon names of each teleport/login

--- a/Source/ACE.PcapReader/ACE.PcapReader.csproj
+++ b/Source/ACE.PcapReader/ACE.PcapReader.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="landblocks.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Message Processors\" />
   </ItemGroup>
 
 </Project>
